# custom-loop-fanctl

./: .gitignore  .mailmap  Cargo.toml  README.md  build.rs  custom-loop-fanctl.sln
.cargo/: config
crates/controller/: Cargo.toml  jlink-flash.gdbinit
crates/controller/.cargo/: config.toml
crates/controller/src/: adc.rs  control_loop.rs  dma.rs  interrupts.rs  main.rs  timers.rs  usb.rs  util.rs
crates/controller/src/fan_controller/: controller.rs  degrees.rs  dsp.rs  mod.rs
crates/controller_lib/: Cargo.toml
crates/controller_lib/src/: degrees.rs  dsp.rs  fancurve.rs  lib.rs
crates/fc_plugin/: Cargo.toml
crates/fc_plugin/src/: error.rs  lib.rs
crates/gui/: Cargo.toml  README.md  index.html
crates/gui/src/: app.rs
fc-plugin/DexControllerSensor/: Class1.cs  DexControllerSensor.cs  DexControllerSensor.csproj
rp-hal/: .gitrepo  Cargo.toml  README.md
rp-hal/boards/tiny_2040/: Cargo.toml
rp-hal/boards/tiny_2040/src/: lib.rs
rp-hal/rp2040-hal/examples/: gpio_in_out.rs
src/: error.rs  main.rs
src/fan_controller/: controller.rs  dsp.rs  mod.rs  temperature.rs
