[package]
name = "custom-loop-fanctl"
version = "0.1.0"
authors = ["Derek Witt <derek@witt.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"

[dependencies.stm32g0xx-hal]
version = "0.1.0"
features = ["stm32g031"]
