[package]
name = "custom-loop-fanctl"
version = "0.1.0"
authors = ["Derek Witt <derek@witt.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.6"
panic-halt = "0.2.0"
tiny_2040 = { path = "rp-hal/boards/tiny_2040" }
rp2040-boot2 = { version = "0.1.2" }

[dev-dependencies]
