[package]
name = "controller"
version = "0.1.0"
authors = ["Dex Witt <dex@witt.me>"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "http://github.com/dexorg25/custom-loop-fanctl/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[dependencies]
cortex-m = { version = "0.7.7", default-features = false, features = [
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.3", features = ["set-vtor", "set-sp", "device"] }
# defmt-serial = "0.6.0"
embedded-hal = "1.0.0"
fugit = { version = "0.3.7" }
panic-halt = "0.2.0"
rp2040-hal = { version = "0.10" }
usb-device = { version = "^0.3" }
usbd-serial = "0.2"
heapless = "^0.8"
controller_lib = { path = "../controller_lib" }


[dependencies.pimoroni-tiny2040]
version = "0.7.0"
features = ["rt", "rp2040-e5"]

[dev-dependencies]
