[package]
name = "tiny_2040"
version = "0.1.0"
authors = ["evan <evanmolder@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/boards/tiny_2040"
description = "Board Support Package for the Pimoroni Tiny 2040"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-hal = { path = "../../rp2040-hal" }
cortex-m-rt = { version = "0.6.14", optional = true }
embedded-time = "0.12.0"
embedded-hal = "0.2.5"


[dev-dependencies]
panic-halt = "0.2.0"
rp2040-boot2 = "0.1.2"

[features]
default = ["rt"]
rt = ["cortex-m-rt", "rp2040-hal/rt"]
